# retentioneering-tools

./: .git-blame-ignore-revs  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Eventstream.ipynb  LICENSE  LICENSE.md  MANIFEST.in  Makefile  NOTICE  README.md  README_dev.md  README_docs.md  Split_sessions.ipynb  Untitled-1.ipynb  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  test310.Dockerfile  test311.Dockerfile  test38.Dockerfile  test39.Dockerfile  tox.ini
.agents/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  test-release.yml
.spyproject/config/: encoding.ini  vcs.ini  workspace.ini
connectors/: Appsflyer_bydays_loader.ipynb  YM_loader.ipynb
docs/: CNAME  Makefile  conf.py  src.core.rst
docs/adr/: 0001-duckdb-backed-eventstream.md  0002-duckdb-replacement-scan.md  0003-immutable-eventstream-and-processor-contract.md  0004-schema-and-grain-neutral-paths.md  0005-anywidget-with-wheel-embedded-js.md  0006-widget-headless-twins.md  0007-single-path-metrics-registry.md  0008-naming-conventions.md  0009-cloud-disabled-by-default.md  0009-mcp-server-as-agent-interface.md  0010-mcp-server-as-agent-interface.md  0010-static-html-export.md  0011-static-html-export.md  0011-versioning-and-release.md  0012-features-dropped-from-3x.md  0012-versioning-and-release.md  0013-docstring-driven-docs.md  0013-features-dropped-from-3x.md  0014-docstring-driven-docs.md  README.md
docs/guide/: agent-skills.md  data-processors.md  eventstream.md  index.md  installation.md  mcp.md  path-metrics.md  quick-start.md  recipes.md  segments.md  tracking.md  widgets.md
docs/plans/: transition-graph-roadmap.md
docs/scripts/: docstring_utils.py  generate_widget_demos.py  render_pages.py
docs/source/: api_reference.rst  clustering.rst  clusters.rst  compare.rst  conf.py  datasets.rst  early_steps.rst  eventstream.rst  eventstream_api.rst  eventstream_concept.rst  eventstream_user_guide.rst  explore_user_behavior.rst  funnel.rst  funnel_tutorial.rst  getting_started.rst  index.rst  installation.rst  mobile-app-case.rst  modules.rst  plot_graph.rst  preprocessing.rst  preprocessing_api.rst  quick_start.rst  release-notes.rst  release_notes.rst  retentioneering.core.rst  retentioneering.visualization.rst  src.core.rst  step_matrix.rst  tooling.rst  tooling_api.rst  transition_matrix.rst  tutorial.rst  tutorials.rst  user_guide.rst  what_is_rete.rst
docs/templates/: _data_processor_base.md.jinja  _widget_base.md.jinja
e2e_tests/: test_clean_logs.py  test_data_processor_helpers_tracking.py  test_preprocessing_graph_tracking.py  test_simple_shop_tracking.py  test_tool_helpers_tracking.py  test_tool_tracking.py
e2e_tests/fixtures/: common.py  helpers.py  tools.py  utils.py
examples/: 00_pickle_params_model.py  01_graph_data_processors.ipynb  02_graph_plot.ipynb  03_data_structure.ipynb  04_export_widgets.ipynb  05_funnels.ipynb  06_custom_validators.ipynb  06_custom_widgets.py  07_params_model_registry.ipynb  08_list_dataprocessors.ipynb  09_clusters.ipynb  09_cohorts.ipynb  09_preprocessing_graph_display.ipynb  10_cohorts.ipynb  10_stattests.ipynb  11_evenstream_tools_methods.ipynb  11_stattests.ipynb  11_transition_graph.ipynb  12_preprocessing_graph.ipynb  Check_split_sessions_cut_path#PLAT_73.ipynb  Preprocessing_check#PLAT_73.ipynb  StepMatrix.ipynb  Untitled.ipynb  bluesleep_sim_data_v1_1.csv  check.ipynb  check_collapse_loops#PLAT-132.ipynb  check_grouping_delete#PLAT_108.ipynb  clusters_tutorial.ipynb  cohorts_check.py  cohorts_notebook.ipynb  compare_tutorial.ipynb  delete_users_by_path_length#PLAT-162.ipynb  demo_step_matrix.ipynb  early_steps.ipynb  eventstream_user_guide.ipynb  filter.html  filter_list.json  funnel_tutorial.ipynb  graph_tutorial.ipynb  mobile-app-case.ipynb  (+11 more)
examples/OLD/: analyse_sim-upd.ipynb  demo_norm_funcs.ipynb  mobile-app-case.ipynb  node_params.json
examples/data/: agents_A.csv  agents_test.csv  test.csv  train_sessions_splited.csv
examples/mobile-app/: config.json  index_2020-08-29 21_46_38_881738.html  index_2020-08-29 21_46_45_874944.html  index_2020-08-29 21_46_49_972054.html  index_2020-08-29 21_47_42_190613.html  index_2020-08-29 21_47_47_468473.html  index_2020-08-29 21_48_04_916772.html  index_2020-08-29 21_48_22_272170.html  index_2020-08-29 21_48_37_789688.html
js/: package-lock.json  package.json
js/viz-core/: package.json  vite.config.ts
js/widget/: package.json  vite.config.ts
notebooks/: api_showcase.ipynb  ecom_demo.ipynb
retentioneering/: MANIFEST.in  __init__.py  __version__.py  version.py
retentioneering/backend/: __init__.py  counter.py  jupiter_server.py  server_manager.py
retentioneering/constants/: __init__.py  constants.py
retentioneering/core/: attribution.py  clustering.py  config.py  feature_extraction.py  market_simulator.py  model.py  node_metrics.py  preprocessing.py  segments.py  simulator.py  tree_selector.py  utils.py
retentioneering/data_processor/: __init__.py  data_processor.py  registry.py
retentioneering/data_processors_lib/: __init__.py  add_negative_events.py  add_positive_events.py  add_start_end_events.py  collapse_loops.py  delete_users_by_path_length.py  drop_paths.py  filter_events.py  group_events.py  group_events_bulk.py  label_cropped_paths.py  label_lost_users.py  label_new_users.py  lost_users.py  negative_target.py  new_users.py  pipe.py  positive_target.py  rename.py  split_sessions.py  start_end_events.py  truncate_path.py  truncate_paths.py  truncated_events.py
retentioneering/datasets/: __init__.py  _base.py  base.py  gen_corner_cases.py  load.py
retentioneering/edgelist/: __init__.py  edgelist.py
retentioneering/eventstream/: __init__.py  eventstream.py  schema.py  types.py  utils.py
scripts/: export_metric_schema.py
src/: Untitled-1.ipynb
src/datasets/: load.py  (+1 more)
supabase/: widget_states.sql
tests/: __init__.py  conftest.py  ops_test.py  test_eventstream.py  tracking_test.py
(+1238 files in other folders)
