[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retentioneering"
version = "5.0.0"
authors = [
  { name = "Retentioneering User Trajectory Analysis Lab", email = "retentioneering@gmail.com" },
]
description = "Retentioneering is a Python library for user retention and clickstream analysis, with interactive DuckDB-backed Eventstream analysis and Jupyter widgets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Retentioneering Software Non-Exclusive License" }
keywords = ["ANALYTICS", "CLICKSTREAM", "RETENTION", "GRAPHS", "TRAJECTORIES", "CJM", "CUSTOMER-SEGMENTATION"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    "pandas>=2.2",
    "duckdb>=1.1",
    "anywidget>=0.9",
    "posthog>=3.0",
    "ipywidgets>=7.0",
    "traitlets>=5.0",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.11.0",
    "mcp[cli]>=1.28.0",
]

[project.urls]
"Homepage" = "https://github.com/retentioneering/retentioneering-tools"
"Bug Tracker" = "https://github.com/retentioneering/retentioneering-tools/issues"
"Documentation" = "https://doc.retentioneering.com/stable/doc/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ipykernel",
    "jupyterlab",
    "notebook",
    "pre-commit",
    "ruff>=0.8.6",
]

[tool.hatch.build]
artifacts = [
    "src/retentioneering/static/*.js",
    "src/retentioneering/static/*.css",
]

[tool.hatch.build.targets.wheel]
packages = ["src/retentioneering"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # sklearn convergence/future warnings on small test datasets are expected
    "ignore::sklearn.exceptions.ConvergenceWarning",
    "ignore::FutureWarning:sklearn",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "pytest>=9.1.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.6",
]
