[metadata]
name = retentioneering-tools
version = 0.0.1
author = Retentioneering User Trajectory Analysis Lab
author_email = retentioneering@gmail.com
description = universal framework for data processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Retentioneering Software Non-Exclusive License (License)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src